<resources>
    <string name="app_name">Wishlist</string>
    <string name="intro_image_description">Login illustration</string>
    <string name="intro_sign_in">Sign in</string>
    <string name="intro_sign_up">Sign up</string>
    <string name="intro_description_header">Let\'s get started</string>
    <string name="intro_description">Add items manually or use our built-in barcode scanner to add items you find to your Wishlist.</string>
    <string name="main_activity_header">Your list</string>
    <string name="main_activity_addItem">Add Item</string>
    <string name="main_activity_scanItem">Scan Barcode</string>

    <!-- Sign Up Strings -->
    <string name="sign_up_header">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_description">Enter your name, username, and password.</string>
    <string name="sign_up_illustration_description">Sign up illustration</string>
    <string name="create_account">Create account</string>
    <string name="sign_up_already_have_account">Already have an account?</string>
    <string name="footer_sign_in_link"><u>Sign In</u></string>

    <!-- Sign In Strings -->
    <string name="sign_in_header">Sign In</string>
    <string name="sign_in_description">Enter your username and password.</string>
    <string name="sign_in_illustration_description">Sign in illustration</string>
    <string name="sign_in">Sign in</string>
    <string name="footer_sign_up_link"><u>Sign Up</u></string>
    <string name="sign_in_dont_have_account">Don\'t have an account?</string>

    <!-- Add Item -->
    <string name="item">Item</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="Price">Price</string>
    <string name="Barcode">Barcode</string>
    <string name="additem">Add Item</string>


</resources>