<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/backgroundWhite"
    tools:context=".IntroActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/intro_screen_title_size"
        android:fontFamily="@font/autour_one"
        android:textColor="@color/coral"
        android:gravity="center"
        android:layout_marginTop="@dimen/intro_screen_title_marginTop"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_marginTop="@dimen/intro_image_margin_top"
        android:contentDescription="@string/intro_image_description"
        android:src="@drawable/intro_illustration" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_description_header"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/intro_description_marginTop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_description"
        android:textColor="@color/lightBlack"
        android:textSize="@dimen/intro_description_textSize"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="@dimen/intro_description_marginSides"
        android:layout_marginStart="@dimen/intro_description_marginSides" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/intro_btns_sides"
        android:layout_marginTop="@dimen/intro_signIn_btn_marginTop"
        android:layout_marginEnd="@dimen/intro_btns_sides"
        android:paddingBottom="@dimen/intro_btns_padding"
        android:paddingTop="@dimen/intro_btns_padding"
        android:background="@drawable/button_rounded"
        android:text="@string/intro_sign_in"
        android:textAlignment="center"
        android:textSize="@dimen/intro_btns_textSize" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/intro_btns_sides"
        android:layout_marginEnd="@dimen/intro_btns_sides"
        android:layout_marginTop="@dimen/intro_singUp_btn_marginTop"
        android:paddingBottom="@dimen/intro_btns_padding"
        android:paddingTop="@dimen/intro_btns_padding"
        android:background="@drawable/no_fill_button_rounded"
        android:textAlignment="center"
        android:text="@string/intro_sign_up"
        android:textSize="@dimen/intro_btns_textSize" />





</LinearLayout>