<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/coral"
    tools:context=".AddItemActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
        android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
        android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
        app:cardCornerRadius="@dimen/card_view_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_view_layout_content_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_itemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item"
                    android:textSize="@dimen/et_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_manufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/manufacturer"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Price"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_barcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Barcode"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_add_new_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/intro_btns_padding"
                android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                android:layout_marginRight="@dimen/intro_btns_padding"
                android:background="@drawable/no_fill_button_rounded"
                android:gravity="center"
                android:paddingTop="@dimen/intro_btns_padding"
                android:paddingBottom="@dimen/intro_btns_padding"
                android:text="@string/additem"
                android:textColor="@color/coral"
                android:textSize="@dimen/intro_btns_textSize"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
